import du projet V2

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,4 @@
 PORT=
-
 PG_URL_PROD=
 
 JWT_SECRET=
@@ -9,3 +8,10 @@ JWT_SECRET_REFRESH=
 JWT_TIME_REFRESH=
 
 VERSION_LABEL=
+
+SMTP_HOST=smtp.gmail.com
+SMTP_USER=emaildereception
+SMTP_PASS=motdepassedelaboitemail   
+
+OAUTH_CLIENT_ID=
+OAUTH_REFRESH_TOKEN=
