--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.12",
     "pg": "^8.6.0",
     "router": "^1.3.5",
     "sanitizer": "^0.1.3",
     "sequelize": "^6.6.5",
     "yarn": "^1.22.11"
-  },
-  "devDependencies": {
-    "axios": "^0.21.4"
   }
 }
